--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,5 +2,7 @@ $dark: #323231;
 $light-dark: #424241;
 $dark-hover: #ccc4;
 
+$blue: turquoise;
+
 $header-height: 30px;
 $page-height: calc(100vh - 30px);
